# codecrafters-shell-rust

./: Cargo.toml  README.md
src/: app.rs  error.rs  files.rs  lib.rs  main.rs  parser.rs  shell.rs
src/commands/: cd.rs  command.rs  echo.rs  executor.rs  exit.rs  external.rs  history.rs  mod.rs  pwd.rs  registry.rs  typ.rs  type_cmd.rs
tests/: command_tests.rs  executor_tests.rs  parser_tests.rs  registry_tests.rs
