[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[lib]
name = "codecrafters_shell"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.38" # error handling
rustyline = "17.0.2" # command line editing

[dev-dependencies]
tempfile = "3.13.0" # temporary files for testing
